# project2

./: .gitignore  package.xml  setup.py
launch/: robot_spawn.launch.py
models/limit_sign/: model.config  model.sdf
models/stop_sign/: model.config  model.sdf
models/traffic_light/: model.config  model.sdf
project2/: env_control.py  line_tracking.py
textures/: mm.py
urdf/: frames_2026-05-22_16.38.48.gv  ros_dd.xacro
worlds/: ros_dd.world
