<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project2</name>
  <version>0.0.0</version>
  <description>ROS 2 Differential Drive Robot Package</description>
  <maintainer email="gnl9658@gmail.com">hwibuk</maintainer>
  <license>Apache-2.0</license>

  <!-- ─── Gazebo 시뮬레이션 및 로봇 구동을 위해 추가된 의존성 ─── -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <!-- 테스트 관련 의존성 (기본 유지) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
